# AutoSurfer

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  makefile  pyproject.toml  runner.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
autosurfer/: config.py  logger.py  main.py  playground.py
autosurfer/agent/: browser_agent.py
autosurfer/agent/brain/: loop_detector.py  memory.py  task_planner.py
autosurfer/agent/browser/: action_executor.py  captcha_handler.py  manager.py  os.py  playwright.py
autosurfer/agent/browser/adapters/: __init__.py  base.py  browserbase_adapter.py  factory.py  playwright_adapter.py
autosurfer/agent/browser/dom/: annotateDom.js
autosurfer/llm/: client.py  prompts.py
autosurfer/llm/response_schema/: browser_actions.py
autosurfer/tests/: constants.py
examples/: launch_browser.py  test_agent_memory.py  test_browser_agents.py  test_captcha_detection.py  test_launch_browsers.py  test_loop_detection.py  test_scroll_action.py
